Optimized endpoints products/search, products/{id}, api/warehouses